tests/ui/type_alias_rust.stderr
error: type alias in extern "Rust" block is not supported
 --> tests/ui/type_alias_rust.rs:5:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
5 |         type Alias = crate::Type;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
